v9.0.0/home.md
---
type: Note
tags: [bdobb, help, home, index]
---

# BDOBB Help

BDOBB (Better Desktop for OpenBB) is a private desktop app for OpenBB-compatible backends — dashboards, live data, a news wire, and a private AI analyst, all running against hardware you control. This vault is the searchable help guide: use Tolaria's search to jump straight to a topic, or browse by section below.

## Getting Started

- [[installing-and-running|Installing and Running BDOBB]] — try it in ten minutes with OpenBB's reference backend
- [[connecting-a-backend|Connecting a Backend]] — add a backend by URL
- [[importing-dashboards|Importing Dashboards]] — import a prearranged dashboard set instead of building one widget at a time

## Interface

- [[layout-and-navigation|Layout and Navigation]] — the icon rail, the AI pane, and how BDOBB degrades gracefully
- [[dashboards-and-widgets|Dashboards and Widgets]] — the widget library and how dashboards are put together

## Widgets

- [[news-ticker|News Ticker]] — the Bloomberg-style headline wire
- [[live-quotes|Live Quotes (Live Grid)]] — a real-time watchlist across equities, crypto, and forex
- [[ai-chat|AI Chat]] — talking to a private AI agent about your dashboards
- [[real-time-chart|Real-Time Chart]] *(planned)* — a live-plotting chart on top of live quotes
- [[arcticdb-explorer|ArcticDB Explorer]] *(planned)* — browsing a historical tick-data vault

## Configuration

- [[backends-and-connections|Backends and Connections]] — what the API key field means for each backend type
- [[secrets-and-access|Secrets and Access]] — the news ticker's key model and why a token lives in the URL
- [[app-data-and-settings|App Data and Settings]] — where your dashboards and settings actually live
- [[kdb-cache|kdb+ Cache (Optional)]] — the optional in-memory tick store behind live quotes and the planned chart

## Integrations

- [[rita-ai-agent-setup|Setting Up the Rita AI Agent]] — deploying a private agent for [[ai-chat|AI Chat]]
- [[eodhd-data-provider|EODHD Data Provider]] — the data vendor behind [[live-quotes|Live Quotes]]
- [[rss-feed-sources|RSS Feed Sources]] — running and configuring the news ticker's feed service
- [[tailscale-networking|Tailscale Networking]] — private-network deployment and identity-based auth

## iPad App

- [[installing-on-ipad|Installing BDOBB on iPad]] — building, signing, and the three gates
- [[ipad-interface-differences|iPad Interface Differences]] — touch vs. hover, and settings precedence

## Troubleshooting

- [[troubleshooting-using-bdobb|Using BDOBB]] — issues in the app itself: install, build, settings, day-to-day widget behavior
- [[troubleshooting-infrastructure|Configuring the Infrastructure]] — issues in the backend services: openbb-docker, rss-ticker, Rita/MCP, Tailscale

## About

- [[about-this-guide|About This Guide]] — where this content comes from, episode by episode
